--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,7 @@
 {
 
+     "home": "Home",
+     "solutions": "Solutions",
      "aboutUs": "About Us",
      "products": "Products",
      "partners": "Partners",
