--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -1,5 +1,7 @@
 {
  
+     "home": "Басты",
+     "solutions": "Шешімдер",
      "aboutUs": "Компания туралы",
      "products": "Өнімдер",
      "partners": "Серіктестер",
