--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,5 +1,7 @@
 {
  
+  "home": "Главная",
+  "solutions": "Решения",
   "aboutUs": "О компании",
   "products": "Продукты",
   "partners": "Партнеры",
