Refactor MainLayout.css and update Russian translations for improved layout and content clarity. Adjusted height and padding properties in the about section for better visual alignment, modified overflow settings for content scrolling, and enhanced translation strings for more impactful messaging.

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -13,8 +13,8 @@
   "mainTitle1": "Эксперт в области разработки",
   "mainTitle2": "цифровых и кастомных",
   "mainTitle3": "решений любой сложности",
-  "mainTitle4": "Мы помогаем бизнесу достичь эффективных результатов за счет инновационных, простых и удобных цифровых решений",
-  "mainTitle5": "Создаем прогрессивные технические решения для оптимизации и автоматизации бизнес-процессов",
+  "mainTitle4": "Помогаем компаниям достигать выдающихся результатов благодаря передовым технологиям и индивидуальному подходу к каждому клиенту",
+  "mainTitle5": "Разрабатываем современные программные решения мирового уровня для цифровизации и автоматизации ключевых бизнес-процессов",
   "mainTitle6": "прогрессивные технические решения",
   "tag1": "Автоматизированное формирование документа",
   "tag2": "Увеличение Time 2 Market",
@@ -46,11 +46,11 @@
   "solutionTitle3": "Наши продукты",
   "partnersSectionText": "Партнёры",
   "aboutTitle": "О нас",
-  "aboutText1": "Казахстанская IT-компания, входящая в состав группы компаний Sapa,",
-  "aboutText2": "эксперт в области разработки цифровых",
-  "aboutText3": "и кастомных решений любой сложности.",
+  "aboutText1": "Ведущая казахстанская IT-компания, входящая в состав группы компаний Sapa, признанный",
+  "aboutText2": "эксперт в разработке корпоративных цифровых",
+  "aboutText3": "и кастомизированных решений любого масштаба и сложности для крупного бизнеса.",
   "aboutText4": "Наша миссия",
-  "aboutText5": "Мы помогаем бизнесу достичь эффективных результатов за счет инновационных, простых и удобных цифровых решений",
+  "aboutText5": "Предоставлять клиентам максимальную ценность через внедрение передовых технологий, повышающих эффективность бизнеса и обеспечивающих конкурентные преимущества на рынке",
   "productTitle": "Наши продукты",
   "partnerTitle": "Нам доверяют",
   "contactTitle": "Контакты",
