Полный редизайн сайта: микросервисная архитектура, админ-панель, новые разделы
- Создана микросервисная архитектура (frontend, admin, api)
- Добавлена админ-панель на порту 3001 для управления контентом
- Создан API сервер на порту 3002 для управления данными
- Добавлены новые разделы: Статьи/СМИ, Команда, Карьера
- Обновлен раздел О компании с новым текстом из брифа
- Обновлена статистика: 50% оптимизация, 300+ партнеров, 93% NPS
- Обновлен адрес: г. Алматы, ул. Шашкина, 24, БЦ K Plaza
- Добавлены комментарии в код с объяснениями
- Обновлен раздел Продукты с информацией о клиентах из API
- Создана документация: ARCHITECTURE.md, SETUP.md, CHANGELOG.md

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -26,12 +26,12 @@
   "tag8": "Микросервисная архитектура",
   "tag9": "BI аналитика",
   "tag10": "Интеграция с учетными системами",
-  "statsValue1": "25%",
-  "statsValue2": "250+",
-  "statsValue3": "95%",
+  "statsValue1": "50%",
+  "statsValue2": "300+",
+  "statsValue3": "93%",
   "statslabel1": "ОПТИМИЗАЦИЯ",
   "statslabel2": "ПАРТНЁРОВ",
-  "statslabel3": "ЛОЯЛЬНОСТЬ",
+  "statslabel3": "NPS",
   "statsDesc1": "Сокращение операционных расходов",
   "statsDesc2": "Которые нам доверяют",
   "statsDesc3": "Индекс удовлетворенности клиентов",
@@ -46,11 +46,11 @@
   "solutionTitle3": "Наши продукты",
   "partnersSectionText": "Партнёры",
   "aboutTitle": "О нас",
-  "aboutText1": "Ведущая казахстанская IT-компания, входящая в состав группы компаний Sapa, признанный",
-  "aboutText2": "эксперт в разработке корпоративных цифровых",
-  "aboutText3": "и кастомизированных решений любого масштаба и сложности для крупного бизнеса.",
-  "aboutText4": "Наша миссия",
-  "aboutText5": "Предоставлять клиентам максимальную ценность через внедрение передовых технологий, повышающих эффективность бизнеса и обеспечивающих конкурентные преимущества на рынке",
+  "aboutText1": "Мы работаем на рынке с 2023 года и за короткое время выстроили устойчивую экосистему цифровых решений в сфере кредитования. Наша платформа представлена более чем в 20 городах Казахстана и объединяет 300+ партнеров по всей стране.",
+  "aboutText2": "Компания разрабатывает и внедряет 2 собственных продукта, обеспечивающих полную автоматизацию всего цикла кредитования — от подачи заявки до принятия решения и сопровождения. Вся система является 100% собственной разработкой, что позволяет гибко адаптироваться под требования клиентов и регуляторов.",
+  "aboutText3": "Сегодня в команде работает 40+ сотрудников, а наши решения уже используются в 20+ GovTech-проектах. Благодаря автоматизации бизнес-процессов клиенты достигают до 50% оптимизации операционных расходов (OPEX).",
+  "aboutText4": "Качество и надежность наших продуктов подтверждаются высоким уровнем удовлетворенности пользователей — NPS составляет 93%.",
+  "aboutText5": "",
   "productTitle": "Наши продукты",
   "partnerTitle": "Нам доверяют",
   "contactTitle": "Контакты",
@@ -161,6 +161,46 @@
       "success": "Сообщение отправлено успешно!",
       "error": "Ошибка при отправке сообщения: ",
          "serverError": "Ошибка сервера"
+    }
+  },
+  "navigation": {
+    "company": "Компания",
+    "articles": "СМИ о нас",
+    "products": "Продукты",
+    "solutions": "Решения",
+    "team": "Команда",
+    "career": "Карьера",
+    "contacts": "Контакты"
+  },
+  "articles": {
+    "title": "СМИ о нас",
+    "subtitle": "Публикации и статьи о компании Sapa Technologies",
+    "readMore": "Читать статью",
+    "source": "Источник"
+  },
+  "team": {
+    "title": "Наша команда",
+    "subtitle": "40+ профессионалов работают над созданием лучших решений",
+    "employees": "сотрудников",
+    "description": "Сегодня в команде работает 40+ сотрудников, а наши решения уже используются в 20+ GovTech-проектах."
+  },
+  "career": {
+    "title": "Карьера",
+    "subtitle": "Присоединяйтесь к нашей команде",
+    "noVacancies": "На данный момент открытых вакансий нет",
+    "apply": "Откликнуться",
+    "vacancyTitle": "Название",
+    "vacancyDescription": "Описание",
+    "vacancyRequirements": "Требования",
+    "vacancyLocation": "Локация",
+    "applyForm": {
+      "title": "Отклик на вакансию",
+      "name": "Имя",
+      "email": "Email",
+      "phone": "Телефон",
+      "resume": "Резюме",
+      "submit": "Отправить",
+      "success": "Ваш отклик успешно отправлен!"
     }
   }
 }
