--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -26,12 +26,12 @@
      "tag8": " Микросервисті архитектура",
      "tag9": "BI аналитикасы",
      "tag10": " Есеп жүйелерімен интеграция",
-     "statsValue1": "25%",
-     "statsValue2": "250+",
-     "statsValue3": "95%",
+     "statsValue1": "50%",
+     "statsValue2": "300+",
+     "statsValue3": "93%",
      "statslabel1": "ОҢТАЙЛАНДЫРУ",
      "statslabel2": "СЕРІКТЕСТЕР",
-     "statslabel3": "БЕЙІЛДІЛІК",
+     "statslabel3": "NPS",
      "statsDesc1": "Операциялық шығындарды азайту",
      "statsDesc2": "Бізге сенім білдіреді",
      "statsDesc3": "Тұтынушылардың қанағаттану индексі",
@@ -46,11 +46,11 @@
      "solutionTitle3": "Біздің өнімдер",
      "partnersSectionText": "Серіктестер",
      "aboutTitle": "Біз туралы",
-     "aboutText1": "Sapa компаниялар тобына кіретін қазақстандық IT- компаниясы,",
-     "aboutText2": "цифрлық даму саласындағы сарапшы",
-     "aboutText3": "және кез келген күрделіліктегі тапсырыс шешімдері.",
-     "aboutText4": "Біздің миссиямыз",
-     "aboutText5": "Біз бизнеске инновациялық, қарапайым және ыңғайлы цифрлық шешімдер арқылы тиімді нәтижелерге қол жеткізуге көмектесеміз",
+     "aboutText1": "Біз 2023 жылдан бері нарықта жұмыс істеп келе жатырмыз және қысқа уақыт ішінде несиелеу саласында тұрақты цифрлық шешімдер экожүйесін құрдық. Біздің платформа Қазақстанның 20-дан астам қаласында ұсынылып, бүкіл ел бойынша 300+ серіктесті біріктіреді.",
+     "aboutText2": "Компания несиелеудің толық циклін автоматтандыратын 2 өз өнімін әзірлейді және енгізеді - өтінім беруден бастап шешім қабылдауға және қолдауға дейін. Бүкіл жүйе 100% меншікті әзірлеме болып табылады, бұл клиенттер мен реттеушілердің талаптарына икемді бейімделуге мүмкіндік береді.",
+     "aboutText3": "Бүгінгі таңда командада 40+ қызметкер жұмыс істейді, ал біздің шешімдеріміз 20+ GovTech-жобаларда қолданылуда. Бизнес-процестерді автоматтандыру арқылы клиенттер операциялық шығындарды (OPEX) 50% дейін оңтайландыра алады.",
+     "aboutText4": "Біздің өнімдердің сапасы мен сенімділігі пайдаланушылардың жоғары деңгейдегі қанағаттануымен расталады - NPS 93% құрайды.",
+     "aboutText5": "",
      "productTitle": "Біздің өнімдер",
      "partnerTitle": "Біздің серіктестер",
      "contactTitle": "Байланысу",
@@ -159,8 +159,48 @@
        },
        "alerts": {
          "success": "Сіздің хабарламаңыз сәтті жіберілді!",
-         "error": "Хабарлама жіберу барысында қателік туындады",
+         "error": "Хабарлама жіберу барысында қателік туындады: ",
          "serverError": "Сервердегі қателік"
+       }
+     },
+     "navigation": {
+       "company": "Компания",
+       "articles": "СМИ о нас",
+       "products": "Өнімдер",
+       "solutions": "Шешімдер",
+       "team": "Команда",
+       "career": "Мансап",
+       "contacts": "Байланысу"
+     },
+     "articles": {
+       "title": "СМИ о нас",
+       "subtitle": "Sapa Technologies компаниясы туралы жарияланымдар мен мақалалар",
+       "readMore": "Мақаланы оқу",
+       "source": "Дереккөз"
+     },
+     "team": {
+       "title": "Біздің команда",
+       "subtitle": "40+ маман ең жақсы шешімдерді жасауға жұмыс істейді",
+       "employees": "қызметкерлер",
+       "description": "Бүгінгі таңда командада 40+ қызметкер жұмыс істейді, ал біздің шешімдеріміз 20+ GovTech-жобаларда қолданылуда."
+     },
+     "career": {
+       "title": "Мансап",
+       "subtitle": "Біздің командаға қосылыңыз",
+       "noVacancies": "Қазіргі уақытта ашық вакансиялар жоқ",
+       "apply": "Өтініш беру",
+       "vacancyTitle": "Атауы",
+       "vacancyDescription": "Сипаттамасы",
+       "vacancyRequirements": "Талаптары",
+       "vacancyLocation": "Орналасуы",
+       "applyForm": {
+         "title": "Вакансияға өтініш",
+         "name": "Аты",
+         "email": "Email",
+         "phone": "Телефон",
+         "resume": "Резюме",
+         "submit": "Жіберу",
+         "success": "Сіздің өтінішіңіз сәтті жіберілді!"
        }
      }
    }
