Обновлены стили и локализации компонентов для улучшения визуального восприятия и адаптивности
- Уменьшены отступы в компонентах BrexArticles, BrexTeam, DashboardCareer и других для создания более компактного дизайна
- Обновлены тексты в локализациях для улучшения информативности и удобства использования
- Изменены параметры отображения и отступы для улучшения адаптивности на различных устройствах

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -10,6 +10,9 @@
      "demoText": "Demo Request",
      "contactButton": "Contact Us",
      "contactButtonText": "Get in touch with us",
+     "emailPlaceholder": "Enter company email",
+     "heroNote": "Sapa Technologies — your digital partner in the fintech market",
+     "learnMore": "Learn more",
      "mainTitle1": "Expert in Development",
      "mainTitle2": "digital and custom",
      "mainTitle3": "solutions of any complexity",
