--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -10,6 +10,9 @@
      "demoText": "Демоға өтініш қалдыру",
      "contactButton": "Бізбен байланысу",
      "contactButtonText": "Бізбен байланысу",
+     "emailPlaceholder": "Компания email енгізіңіз",
+     "heroNote": "Sapa Technologies — fintech нарығындағы сіздің цифрлық серіктесіңіз",
+     "learnMore": "Көбірек білу",
      "mainTitle1": "Кез-келген күрделіліктегі",
      "mainTitle2": "цифрлық және тапсырыстық",
      "mainTitle3": "шешімдерді әзірлеу саласындағы сарапшы",
