--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -10,6 +10,9 @@
   "demoText": "Заявка на демо",
   "contactButton": "Связаться с нами",
   "contactButtonText": "Свяжитесь с нами",
+  "emailPlaceholder": "Введите email компании",
+  "heroNote": "Sapa Technologies — ваш цифровой партнер на рынке fintech",
+  "learnMore": "Узнать больше",
   "mainTitle1": "Эксперт в области разработки",
   "mainTitle2": "цифровых и кастомных",
   "mainTitle3": "решений любой сложности",
