Обновлены локализации и тексты в компонентах для улучшения пользовательского опыта
- Заменены статические тексты на локализованные строки в компонентах BrexArticles и HeroSection
- Добавлены новые ключи локализации для английского, русского и казахского языков, включая плейсхолдеры и заметки

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -25,7 +25,10 @@
      "tag7": "Increase customer base",
      "tag8": "Microservice architecture",
      "tag9": "BI analytics",
-     "tag10": "Integration with accounting systems",
+    "tag10": "Integration with accounting systems",
+    "emailPlaceholder": "Enter company email",
+    "heroNote": "Sapa Technologies is your digital partner in the fintech market",
+    "learnMore": "Learn more",
      "statsValue1": "50%",
      "statsValue2": "300+",
      "statsValue3": "93%",
