--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -26,6 +26,9 @@
      "tag8": " Микросервисті архитектура",
      "tag9": "BI аналитикасы",
      "tag10": " Есеп жүйелерімен интеграция",
+     "emailPlaceholder": "Компания email енгізіңіз",
+     "heroNote": "Sapa Technologies — fintech нарығындағы сіздің цифрлық серіктесіңіз",
+     "learnMore": "Толығырақ білу",
      "statsValue1": "50%",
      "statsValue2": "300+",
      "statsValue3": "93%",
