--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -26,6 +26,9 @@
   "tag8": "Микросервисная архитектура",
   "tag9": "BI аналитика",
   "tag10": "Интеграция с учетными системами",
+  "emailPlaceholder": "Введите email компании",
+  "heroNote": "Sapa Technologies — ваш цифровой партнер на рынке fintech",
+  "learnMore": "Узнать больше",
   "statsValue1": "50%",
   "statsValue2": "300+",
   "statsValue3": "93%",
