Обновлены тексты локализации в компоненте DashboardArticles для улучшения пользовательского опыта. Заменены статические строки на локализованные ключи для заголовка и кнопки "Читать статью".

--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -176,7 +176,7 @@
       "contacts": "Байланысу"
     },
      "articles": {
-       "title": "СМИ о нас",
+       "title": "БАҚ-та біз туралы",
        "subtitle": "Sapa Technologies компаниясы туралы жарияланымдар мен мақалалар",
        "readMore": "Мақаланы оқу",
        "source": "Дереккөз"
