Обновлены тексты локализации для английского и русского языков в файлах translation.json и i18n.js, улучшая точность и ясность формулировок. Изменены заголовки и описания для более эффективного общения с пользователями.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -10,10 +10,10 @@
      "demoText": "Demo Request",
      "contactButton": "Contact Us",
      "contactButtonText": "Get in touch with us",
-     "mainTitle1": "Expert in Development",
+     "mainTitle1": "Expert in development of",
      "mainTitle2": "digital and custom",
      "mainTitle3": "solutions of any complexity",
-     "mainTitle4": "We help businesses achieve effective results through innovative, simple, and convenient digital solutions",
+     "mainTitle4": "We help businesses achieve measurable results through innovative, simple, and convenient digital solutions",
      "mainTitle5": "Create progressive technical solutions for optimizing and automating business processes",
      "mainTitle6": "progressive technical solutions",
      "tag1": "Automated document generation",
