--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -10,10 +10,10 @@
   "demoText": "Заявка на демо",
   "contactButton": "Связаться с нами",
   "contactButtonText": "Свяжитесь с нами",
-  "mainTitle1": "Эксперт в области разработки",
+  "mainTitle1": "Эксперт в разработке",
   "mainTitle2": "цифровых и кастомных",
-  "mainTitle3": "решений любой сложности",
-  "mainTitle4": "Помогаем компаниям достигать выдающихся результатов благодаря передовым технологиям и индивидуальному подходу к каждому клиенту",
+  "mainTitle3": "решений любой сложности",
+  "mainTitle4": "Помогаем бизнесу достигать ощутимых результатов за счёт современных цифровых решений и индивидуального подхода к каждому клиенту",
   "mainTitle5": "Разрабатываем современные программные решения мирового уровня для цифровизации и автоматизации ключевых бизнес-процессов",
   "mainTitle6": "прогрессивные технические решения",
   "tag1": "Автоматизированное формирование документа",
