--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -59,6 +59,20 @@
      "contactTitle": "Байланысу",
      "podrobnee": "Толығырақ",
    
+     "cta": {
+       "title": "Sapa Technologies-пен жұмыс істеуге дайынсыз ба?",
+       "description": "Біздің шешімдер бизнесіңізге жаңа нәтижелерге қалай көмектесетінін біліңіз",
+       "primary": "Демоға тапсырыс жасау",
+       "secondary": "Бізбен байланысу"
+     },
+
+     "contactsSection": {
+       "subtitle": "Бізбен сізге ыңғайлы кез келген тәсілмен байланысыңыз",
+       "phone": "Телефон",
+       "email": "Email",
+       "address": "Мекен-жайы",
+       "openIn2gis": "2ГИС-те ашу"
+     },
      "footer": {
        "contacts": "Байланысу",
        "email": "Email",
@@ -185,7 +199,16 @@
        "title": "Біздің команда",
        "subtitle": "40+ маман ең жақсы шешімдерді жасауға жұмыс істейді",
        "employees": "қызметкерлер",
-       "description": "Бүгінгі таңда командада 40+ қызметкер жұмыс істейді, ал біздің шешімдеріміз 20+ GovTech-жобаларда қолданылуда."
+       "description": "Бүгінгі таңда командада 40+ қызметкер жұмыс істейді, ал біздің шешімдеріміз 20+ GovTech-жобаларда қолданылуда.",
+       "loading": "Жүктелуде...",
+       "photoPlaceholder": "Фотосессиядан команданың суреттері",
+       "photoNote": "Фотоларды админ-панель арқылы жүктеңіз"
+     },
+     "heroStats": {
+       "badge": "Fintech саласындағы инновациялар",
+       "partners": "Серіктестер",
+       "cities": "Қалалар",
+       "optimization": "Оңтайландыру"
      },
      "career": {
        "title": "Мансап",
