--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -59,6 +59,21 @@
   "contactTitle": "Контакты",
   "podrobnee": "Подробнее",
 
+  "cta": {
+    "title": "Готовы начать работу с Sapa Technologies?",
+    "description": "Узнайте, как наши решения помогают бизнесу достигать новых результатов",
+    "primary": "Заказать демо",
+    "secondary": "Связаться с нами"
+  },
+
+  "contactsSection": {
+    "subtitle": "Свяжитесь с нами любым удобным способом",
+    "phone": "Телефон",
+    "email": "Email",
+    "address": "Адрес",
+    "openIn2gis": "Открыть в 2ГИС"
+  },
+
   "footer": {
     "contacts": "Контакты",
     "email": "Email",
@@ -185,7 +200,16 @@
     "title": "Наша команда",
     "subtitle": "40+ профессионалов работают над созданием лучших решений",
     "employees": "сотрудников",
-    "description": "Сегодня в команде работает 40+ сотрудников, а наши решения уже используются в 20+ GovTech-проектах."
+    "description": "Сегодня в команде работает 40+ сотрудников, а наши решения уже используются в 20+ GovTech-проектах.",
+    "loading": "Загрузка...",
+    "photoPlaceholder": "Фото команды с фотосессии",
+    "photoNote": "Загрузите фото через админ-панель"
+  },
+  "heroStats": {
+    "badge": "Инновации в fintech",
+    "partners": "Партнёров",
+    "cities": "Городов",
+    "optimization": "Оптимизация"
   },
   "career": {
     "title": "Карьера",
