--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -237,6 +237,47 @@
      },
      "demoModalSuccess": {
        "title": "Өтініш қабылданды!"
+     },
+     "products": {
+       "learnMore": "Толығырақ білу →",
+       "modal": {
+         "capabilities": "Негізгі мүмкіндіктер",
+         "benefits": "Артықшылықтар",
+         "ourClients": "Біздің клиенттер",
+         "financialOrganizations": "Қаржы ұйымдары",
+         "dealers": "Дилерлер",
+         "dealersText": "{{count}} дилерден астам платформа арқылы қосылған және бизнесін жүргізіп жатыр",
+         "orderDemo": "Демоға тапсырыс жасау",
+         "close": "Жабу"
+       }
+     },
+     "features": {
+       "conveyor": {
+         "imageLabel": "Несие конвейері",
+         "title": "Несие конвейері — толық циклді автоматтандыру",
+         "description": "Несие берудің толық циклін автоматтандыруға арналған кешенді шешім — өтінім беруден бастап шешім қабылдауға және қолдауға дейін. Бүкіл жүйе 100% меншікті әзірлеме болып табылады, бұл клиенттер мен реттеушілердің талаптарына икемді бейімделуге мүмкіндік береді. Бизнес-процестерді автоматтандыру арқылы клиенттер операциялық шығындарды 50% дейін оңтайландыра алады.",
+         "button": "Конвейер туралы толығырақ білу"
+       },
+       "broker": {
+         "imageLabel": "Несие брокері",
+         "title": "Несие брокері — барлығы үшін бірыңғай платформа",
+         "description": "Дилерлік орталықтарды, банктерді және МҚҰ-ларды біріктіретін цифрлық платформа. 300-ден астам дилер және 6 қаржы ұйымы қазірдің өзінде біздің платформа арқылы жұмыс істеп, өтінімдерді жылдам өңдеу және процестің ашықтығын қамтамасыз етеді. Платформа Қазақстанның 20-дан астам қаласында ұсынылған.",
+         "button": "Брокер туралы толығырақ білу"
+       }
+     },
+     "contacts": {
+       "address": "Алматы қ., Шашкин көш., 24, БЦ K Plaza",
+       "mapTitle": "Sapa Technologies кеңсесінің картасы"
+     },
+     "career": {
+       "errors": {
+         "noVacancySelected": "Қате: вакансия таңдалмаған",
+         "unexpectedResponse": "Сервер күтпеген жауап қайтарды",
+         "default": "Өтініш жіберу кезінде қате орын алды. Қайталап көріңіз.",
+         "notFound": "Вакансия табылмады. Бетті жаңартыңыз.",
+         "serverError": "Сервер қатесі. Кейінірек қайталап көріңіз.",
+         "networkError": "Серверге қосылу мүмкін болмады. Интернет байланысын тексеріңіз."
+       }
      }
    }
    
