--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -234,9 +234,50 @@
     }
   },
   "trustedBy": {
-    "description": "Нам доверяют 300+ партнёров по всей стране"
+    "description": "Нам доверяют более 300+ партнеров"
   },
   "demoModalSuccess": {
     "title": "Заявка принята!"
+  },
+  "products": {
+    "learnMore": "Узнать больше →",
+    "modal": {
+      "capabilities": "Основные возможности",
+      "benefits": "Преимущества",
+      "ourClients": "Наши клиенты",
+      "financialOrganizations": "Финансовые организации",
+      "dealers": "Дилеры",
+      "dealersText": "Более {{count}} дилеров подключены и ведут свой бизнес через платформу",
+      "orderDemo": "Заказать демо",
+      "close": "Закрыть"
+    }
+  },
+  "features": {
+    "conveyor": {
+      "imageLabel": "Кредитный конвейер",
+      "title": "Кредитный конвейер — автоматизация всего цикла",
+      "description": "Комплексное решение для автоматизации всего цикла кредитования — от подачи заявки до принятия решения и сопровождения. Вся система является 100% собственной разработкой, что позволяет гибко адаптироваться под требования клиентов и регуляторов. Благодаря автоматизации бизнес-процессов клиенты достигают до 50% оптимизации операционных расходов.",
+      "button": "Узнать больше о конвейере"
+    },
+    "broker": {
+      "imageLabel": "Кредитный брокер",
+      "title": "Кредитный брокер — единая платформа для всех",
+      "description": "Цифровая платформа, объединяющая дилерские центры, банки и МФО. Более 300 дилеров и 6 финансовых организаций уже работают через нашу платформу, обеспечивая быструю обработку заявок и прозрачность процесса. Платформа представлена более чем в 20 городах Казахстана.",
+      "button": "Узнать больше о брокере"
+    }
+  },
+  "contacts": {
+    "address": "г. Алматы, ул. Шашкина, 24, БЦ K Plaza",
+    "mapTitle": "Карта офиса Sapa Technologies"
+  },
+  "career": {
+    "errors": {
+      "noVacancySelected": "Ошибка: вакансия не выбрана",
+      "unexpectedResponse": "Сервер вернул неожиданный ответ",
+      "default": "Произошла ошибка при отправке отклика. Пожалуйста, попробуйте еще раз.",
+      "notFound": "Вакансия не найдена. Пожалуйста, обновите страницу.",
+      "serverError": "Ошибка на сервере. Пожалуйста, попробуйте позже.",
+      "networkError": "Не удалось подключиться к серверу. Проверьте подключение к интернету."
+    }
   }
 }
